--- a/css/style.css
+++ b/css/style.css
@@ -2001,6 +2001,182 @@ section {
 
 
 
+/* Submit a Ticket */
+.submit-ticket {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+.submit-ticket .title {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.submit-ticket .title h1 {
+    font-size: 4rem;
+    color: var(--black);
+    padding-bottom: 1rem;
+}
+
+.submit-ticket .title p {
+    font-size: 1.5rem;
+    color: var(--black);
+}
+
+.submit-ticket .submit-ticket-body {
+    width: 50%;
+    padding-top: 3rem;
+}
+
+.submit-ticket .submit-ticket-body-title {
+    font-size: 1.2rem;
+    color: var(--black);
+    padding-left: 1rem;
+    border-bottom: 1.5px solid var(--main-color);
+    /*make it bold*/
+    font-weight: bold;
+}
+
+.submit-ticket .submit-ticket-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.submit-ticket .submit-ticket-form-input {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.submit-ticket .submit-ticket-form-input input {
+    width: 80%;
+    font-size: 1.5rem;
+    padding: 0.3rem;
+    border-bottom: 2px solid var(--main-color);
+    outline: none;
+    color: var(--black);
+    background-color: transparent;
+}
+
+.submit-ticket .submit-ticket-form-input textarea {
+    width: 80%;
+    font-size: 1.5rem;
+    padding: 0.3rem;
+    border: 2px solid var(--main-color);
+    border-radius: 0.5rem;
+    outline: none;
+    color: var(--black);
+    background-color: transparent;
+    resize: none;
+    height: 25rem;
+    margin-bottom: 1rem;
+}
+
+.submit-ticket .submit-ticket-form-input textarea::-webkit-scrollbar {
+    width: 0.5rem;
+}	
+
+.submit-ticket .submit-ticket-form-input textarea::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.submit-ticket .submit-ticket-form-input textarea::-webkit-scrollbar-thumb {
+    background: var(--main-color);
+}
+
+
+.submit-ticket .submit-ticket-form-input input:focus {
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.submit-ticket .submit-ticket-form-input textarea:focus {
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.submit-ticket .submit-ticket-form-input select{
+    width: 80%;
+    font-size: 1.5rem;
+    padding: 0.3rem;
+    border: 2px solid var(--main-color);
+    border-radius: 0.5rem;
+    outline: none;
+    color: var(--black);
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.submit-ticket .submit-ticket-form-input select:hover {
+    opacity: 0.8;
+}
+
+.submit-ticket .submit-ticket-form-input label{
+    display: block;
+    font-size: 2rem;
+    padding-top: 1rem;
+    color: var(--black);
+}
+
+.submit-ticket .submit-ticket-form-input label:hover{
+    color: var(--main-color);
+}
+
+.submit-ticket .submit-ticket-form-input .air-button{
+    padding: 3rem;
+}
+
+.submit-ticket .submit-ticket-form-input .files{
+    display: none;
+}
+
+.submit-ticket .submit-ticket-form-input .upload-files{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    cursor: pointer;
+}
+
+.submit-ticket .submit-ticket-form-input .upload-files i{
+    font-size: 2rem;
+    color: var(--main-color);
+    padding-left: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -2108,6 +2284,10 @@ section {
         font-size: 10vw;
     }
 
+    .submit-ticket .submit-ticket-body{
+        width: 80%;
+    }
+
 }
 
 @media (max-width: 46.875em) {
@@ -2180,6 +2360,10 @@ section {
 
     html {
         font-size: 50%;
+    }
+
+    .submit-ticket .submit-ticket-body{
+        width: 95%;
     }
 
 }
