--- a/css/style.css
+++ b/css/style.css
@@ -1466,6 +1466,20 @@ section {
 }
 
 
+
+.table-sortable th {
+    cursor: pointer;
+}
+
+.table-sortable .th-sort-asc::after {
+    content: "\25b4";
+}
+
+.table-sortable .th-sort-desc::after {
+    content: "\25be";
+}
+
+
 /* Departments */
 
 .new-department {
