--- a/css/style.css
+++ b/css/style.css
@@ -1466,17 +1466,17 @@ section {
 }
 
 
-
+/* Sorting table icon */
 .table-sortable th {
     cursor: pointer;
 }
 
 .table-sortable .th-sort-asc::after {
-    content: "\25b4";
+    content: "\25be";
 }
 
 .table-sortable .th-sort-desc::after {
-    content: "\25be";
+    content: "\25b4";
 }
 
 
