--- a/css/style.css
+++ b/css/style.css
@@ -1312,6 +1312,10 @@ section {
 
 
 /* All Tickets */
+.custom-space {
+    padding-top: 4rem;
+}
+
 .tickets-table {
     border-collapse: collapse;
     display: flex;
@@ -1327,6 +1331,8 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 0rem;
+    padding-bottom: 5rem;
 }
 
 .tickets-table .tickets-body table,
@@ -1480,6 +1486,24 @@ section {
 }
 
 
+/* Search bar for the table */
+.filter-table {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1rem;
+    width: 100%;
+    padding-left: 19.5rem;
+}
+
+.filter-table input{
+    font-size: 1.5rem;
+    border: none;
+    border-bottom: 2px solid var(--main-color);
+}
+
+
 /* Departments */
 
 .new-department {
@@ -1607,6 +1631,16 @@ section {
     opacity: 0.8;
 }
 
+.top-of-table {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 3rem;
+
+}
+
 
 
 /* Agents in a Department */
@@ -1618,8 +1652,6 @@ section {
 .department-table-title h1 {
     font-size: 2.69rem;
     color: var(--black);
-    border-bottom: 2px solid var(--main-color);
-
 }
 
 
@@ -1638,6 +1670,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 0;
 }
 
 .department-agents .agents table,
@@ -2161,6 +2194,7 @@ section {
 
 .submit-ticket .submit-ticket-form-input .air-button {
     padding: 3rem;
+    padding-bottom: 0rem;
 }
 
 .submit-ticket .submit-ticket-form-input .files {
@@ -2189,6 +2223,12 @@ section {
 .submit-ticket .submit-ticket-form-input li{
     font-size: 1.5rem;
     color: var(--main-color);
+}
+
+.text-danger{
+    color: var(--main-color);
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 
@@ -2325,6 +2365,16 @@ section {
         width: 80%;
     }
 
+    .filter-table{
+        width: 80%;
+        padding-left: 10rem;
+    }
+
+    .new-department{
+        width: 80%;
+        padding-right: 10rem;
+    }
+
 }
 
 @media (max-width: 46.875em) {
@@ -2383,6 +2433,15 @@ section {
         padding-left: 0;
     }
 
+    .filter-table{
+        width: 50%;
+        padding-left: 7.5rem;
+    }
+
+    .new-department{
+        width: 50%;
+        padding-right: 7.5rem;
+    }
 
 }
 
